# proper-text-art

./: .gitignore  README.md  app.py  pyproject.toml
proper_text_art/: cli.py  colors.py  mesh.py  pixelate.py  renderers.py  structure.py  textify.py  web.py
scripts/: ppa_gen.py
tests/: test_colors.py  test_mesh.py  test_pixelate.py  test_renderers.py  test_textify.py
